--- a/conf/app.conf
+++ b/conf/app.conf
@@ -4,3 +4,5 @@ runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
+sinkersapiurl = "http://main01.superprivyhosting.com:38080"
+elasticsearchurl = "http://main01.superprivyhosting.com:9200"
