--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,8 +1,17 @@
 appname = beekeeper_api
 httpport = 8080
-runmode = dev
+runmode = prod
 autorender = false
-copyrequestbody = true
-EnableDocs = true
+
+
+[dev]
 sinkersapiurl = "http://main01.superprivyhosting.com:38080"
 elasticsearchurl = "http://main01.superprivyhosting.com:9200"
+copyrequestbody = true
+EnableDocs = true
+
+[prod]
+copyrequestbody = false
+EnableDocs = false
+sinkersapiurl = "http://172.17.0.1:38080"
+elasticsearchurl = "http://172.17.0.1:9200"
