--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,13 +2,20 @@ appname = beekeeper_api
 httpport = 8080
 runmode = prod
 autorender = false
+enablegzip = true 
 
 
 [dev]
 sinkersapiurl = "http://main01.superprivyhosting.com:38080"
 elasticsearchurl = "http://main01.superprivyhosting.com:9200"
-copyrequestbody = true
+copyrequestbody = false
 EnableDocs = true
+
+[pred]
+copyrequestbody = false
+EnableDocs = false
+sinkersapiurl = "http://main01.superprivyhosting.com:38080"
+elasticsearchurl = "http://main01.superprivyhosting.com:9200"
 
 [prod]
 copyrequestbody = false
